--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-query": "^5.61.3",
+    "axios": "^1.7.7",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
